Styling fixes for timezone menu on smaller browser-widths

--- a/themes/cp_themes/corporate/css/global.css
+++ b/themes/cp_themes/corporate/css/global.css
@@ -1280,6 +1280,11 @@ width:100%;
 	
 }
 
+#mainContent #registerUser span.timezone {
+	display: inline;
+	width: auto;
+}
+
 #mainContent #registerUser table label, #mainContent #registerUser table span {
 	display:			none;
 }
